got base django set up. Created blog, blog_api, and templates. Threw in JS files

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,12 @@ target/
 local_settings.py
 .idea
 .DS_Store
+
+.idea/
+*.pyc
+DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
